--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
     <div class="step align-center" data-x="500" data-y="2000" data-z="1" data-scale="1">
         <b class="black">Participe en la Comunidad</b>
-        <p class="mono">Búsque en su ciudad comunidades afines a su pasión</p>
+        <p class="mono">Busque en su ciudad comunidades afines a su pasión</p>
     </div>
 
     <div class="step align-center" data-x="500" data-y="3000" data-z="1" data-scale="1">
