Add communities and fix some texts

--- a/index.html
+++ b/index.html
@@ -35,21 +35,22 @@
 
 
     <div id="aboutme" class="step align-center" data-x="0" data-y="0" data-z="-20">
+        <p class="white small">I ❤ Mantises!</p><br />
         <img src="images/mantis.png" width="400"/><br />
-        <p class="white small">I ❤ Mantises!</p>
+        <a class="very-small" href="http://about.me/julianduque">about.me/julianduque</a>
     </div>
 
-    <div class="step" data-x="450" data-y="-200">
+    <div id="university" class="step" data-x="450" data-y="-200">
         <p class="white">Ingeniero de Telecomunicaciones</p>
         <p class="mono align-right">Universidad Santo Tomás</p>
     </div>
 
-    <div class="step" data-x="450" data-y="-20">
+    <div id="specialization" class="step" data-x="450" data-y="-20">
         <p class="white">Especialista en Desarrollo de Software</p>
         <p class="mono align-right">Universidad EAFIT</p>
     </div>
 
-    <div class="step" data-x="450" data-y="160">
+    <div id="job" class="step" data-x="450" data-y="160">
         <p class="white">Arquitecto Soluciones Móviles</p>
         <p class="mono align-right">Intergrupo Mobile</p>
     </div>
@@ -75,7 +76,7 @@
         <img src="images/rae-pasion.png" width="600"/>
     </div>
 
-    <div class="step align-center" data-x="3650" data-y="1000">
+    <div id="passion-wikipedia" class="step align-center" data-x="3650" data-y="1000">
         <p class="white">¿y que dice la Wikipedia?</p>
         <br />
         <p class="white mono small align-justify">
@@ -83,21 +84,21 @@
         </p>
     </div>
 
-    <div class="step" data-x="3650" data-y="2000" data-scale="2">
+    <div id="passion-quote" class="step" data-x="3650" data-y="2000" data-scale="2">
         <quote class="white mono">"Passion is the energy that comes from bringing more of YOU into what you do".</quote>
         <p class="align-right">Curt Rosengren</p>
     </div>
 
-    <div class="step align-center" data-x="3650" data-y="2000" data-rotate-x="-90">
+    <div id="passion-circles" class="step align-center" data-x="3650" data-y="2000" data-rotate-x="-90">
         <img src="images/circulos.png" width="800"/>
     </div>
 
-    <div class="step align-center" data-x="6000" data-y="2000" data-rotate-x="0" data-scale="2">
+    <div id="what-is-pdd" class="step align-center" data-x="6000" data-y="2000" data-rotate-x="0" data-scale="2">
         <p class="white">y entonces...</p>
         <p class="black">¿Que es <b>Passion Driven Development</b>?</p>
     </div>
 
-    <div class="step align-center" data-x="6000" data-y="2000" data-z="10000" data-scale="10">
+    <div id="agile-manifesto" class="step align-center" data-x="6000" data-y="2000" data-z="10000" data-scale="10">
         <b class="small">Manifesto for Agile Software Development</b>
         <br />
         <div class="small">
@@ -116,7 +117,7 @@
         <a class="small" href="http://agilemanifesto.org/">agilemanifesto.org</a>
     </div>
 
-    <div class="step align-center" data-x="6000" data-y="5000" data-z="10000" data-scale="10" data-rotate-x="-90">
+    <div id="pdd-manifesto" class="step align-center" data-x="6000" data-y="5000" data-z="10000" data-scale="10" data-rotate-x="-90">
         <b class="small">Manifesto for Passion Driven Development</b>
         <br />
         <div class="small">
@@ -134,22 +135,23 @@
             the left, there is no value in the items on the right.
         </div>
         <a class="small" href="http://passiondrivendevelopment.org/">passiondrivendevelopment.org</a>
+        <p class="very-small">by Sushil Selvaraj</p>
     </div>
 
-    <div class="step align-center" data-x="12000" data-y="5000" data-z="10000" data-scale="10" data-rotate-x="-90">
+    <div id="empowerment" class="step align-center" data-x="12000" data-y="5000" data-z="10000" data-scale="10" data-rotate-x="-90">
         <b class="white">Empowerment of people</b>
     </div>
 
-    <div class="step align-center" data-x="12000" data-y="5000" data-z="10000" data-scale="10" data-rotate-x="-90">
-        <p>Estudie preferiblemente todos los días</p>
+    <div id="learn-by-doing" class="step align-center" data-x="12000" data-y="5000" data-z="10000" data-scale="10" data-rotate-x="-90">
+        <p>Aprenda haciendo</p>
     </div>
 
-    <div class="step align-center" data-x="12000" data-y="5000" data-z="10000" data-scale="10" data-rotate-x="-90">
-        <p>Busque cual es su verdadera motivación</p>
+    <div id="find-your-motivation" class="step align-center" data-x="12000" data-y="5000" data-z="10000" data-scale="10" data-rotate-x="-90">
+        <p>Encuentre su verdadera motivación</p>
     </div>
 
-    <div class="step align-center" data-x="12000" data-y="5000" data-z="10000" data-scale="10" data-rotate-x="-90">
-        <p>No trate a su equipo de trabajo como 'Recursos', trátelos como PERSONAS!</p>
+    <div id="we-are-people" class="step align-center" data-x="12000" data-y="5000" data-z="10000" data-scale="10" data-rotate-x="-90">
+        <p>¡No trate a su equipo de trabajo como 'Recursos', trátelos como PERSONAS!</p>
     </div>
 
     <div class="step align-center" data-x="12000" data-y="5000" data-z="10000" data-scale="10" data-rotate-x="-90">
@@ -181,7 +183,7 @@
     </div>
 
     <div class="step align-center" data-x="12000" data-y="5000" data-z="10000" data-scale="10" data-rotate-x="-90">
-        <p>Encuentre sus debilidades y trabaje por mejorarlas</p>
+        <p>Conozca sus debilidades y trabaje por mejorarlas</p>
     </div>
 
     <div class="step align-center" data-x="12000" data-y="5000" data-z="10000" data-scale="10" data-rotate-x="-90">
@@ -206,20 +208,32 @@
     </div>
 
      <div class="step align-center" data-x="500" data-y="1000" data-z="1" data-scale="1">
-        <b class="black">Descubra qué lo apasiona</b>
+        <b class="black">Descubra su Pasión</b>
         <p class="mono">¿Qué del proceso de Desarrollo es lo que mas le gusta?</p>
     </div>
 
-    <div class="step align-center" data-x="500" data-y="2000" data-z="1" data-scale="1">
+    <div id="community" class="step align-center" data-x="500" data-y="2000" data-z="1" data-scale="1">
         <b class="black">Participe en la Comunidad</b>
-        <p class="mono">Busque en su ciudad comunidades afines a su pasión</p>
+        <p class="mono">Busque en su ciudad comunidades afines a su pasión y únase</p>
+    </div>
+
+    <div id="avanet" class="step align-center" data-x="1000" data-y="2000" data-z="1" data-scale="1">
+        <b class="black">Avanet</b><br />
+        <a href="http://avanet.org" class="very-small">avanet.org</a>
+        <p class="very-small mono white">@avanet</p>
+    </div>
+
+    <div id="devmed" class="step align-center" data-x="1500" data-y="2000" data-z="1" data-scale="1">
+        <b class="black">/dev/med/</b><br />
+        <a class="very-small">coffeegrid.org/dev/med/</a>
+        <p class="very-small mono white">@avanet</p>
     </div>
 
     <div class="step align-center" data-x="500" data-y="3000" data-z="1" data-scale="1">
         <b class="black">Contribuya a un proyecto Open Source</b>
         <p class="mono">Fork &rarr; Refactor &rarr; Pull Request</p><br />
         <p class="mono small">Encuentre un proyecto para contribuir en:</p>
-        <a href="https://github.com">github.com</a>
+        <a class="very-small" href="https://github.com">github.com</a>
     </div>
 
     <div class="step align-center" data-x="500" data-y="4000" data-z="1" data-scale="1">
@@ -233,10 +247,10 @@
         <p class="mono">Compartan con los demás aquello que los apasiona</p>
     </div>
 
-    <div class="step align-center" data-x="500" data-y="6000" data-z="1" data-scale="1">
+    <div id="blog-twitter" class="step align-center" data-x="500" data-y="6000" data-z="1" data-scale="1">
         <b class="black">Cree un blog o una buena cuenta en Twitter</b>
         <p class="mono">Es una de las mejores formas para compartir información y recibir feedback de la Comunidad</p><br />
-        <p class="mono small white">Yo no soy el mejor ejemplo de esto.. hehe</p>
+        <p class="mono very-small white">Yo no soy el mejor ejemplo de esto pero me pueden seguir @julian_duque</p>
     </div>
 
     <div class="step align-center" data-x="500" data-y="7000" data-z="1" data-scale="1">
@@ -245,11 +259,10 @@
         <p class="mono">Cuando uno <b>AMA</b> lo que hace este proceso se da naturalmente</p>
     </div>
 
-    <div class="step align-center" data-x="0" data-y="0" data-z="1" data-scale="100">
-        <b class="big white">¡Muchas Gracias!</b>
-        <p class="mono small">Esta presentación se encuentra en: <a href="http://julianduque.github.com/passion-driven-development/">julianduque.github.com/passion-driven-development</a></p>
+    <div id="credits" class="step align-center" data-x="0" data-y="0" data-z="1" data-scale="100">
+        <b class="big white">¡Gracias!</b>
+        <p class="mono very-small">Esta presentación se encuentra en: <br /><a href="http://julianduque.github.com/passion-driven-development/">julianduque.github.com/passion-driven-development</a><br /><br /> Fue creada con <b>impress.js</b> y el código fuente lo pueden encontrar en: <a href="https://github.com/julianduque/passion-driven-development">github.com/julianduque/passion-driven-development</a></p>
     </div>
-
 
 </div>
 
